docs: 补充环境搭建

--- a/source/_posts/MFW/项目搭建.md
+++ b/source/_posts/MFW/项目搭建.md
@@ -29,3 +29,9 @@ cover:
 ### 安装 VSCode
 
 [官网](https://code.visualstudio.com/) | [在 Windows 上安装流程](https://www.runoob.com/vscode/vscode-windows-install.html)
+
+## 搭建项目
+
+### 使用模板
+
+[模板地址](https://github.com/MaaXYZ/MaaPracticeBoilerplate)
